Rework of minecart APIs + general cleanup